syntax = "proto3";

package events;

option go_package = "simplebank/internal/domain/events";

message AccountCreated {
  string account_id = 1;
  int64 balance = 2;
  string currency = 3;
  string status = 4;
}

message MoneyDeposited {
  string account_id = 1;
  int64 amount = 2;
}

message MoneyWithdrawn {
  string account_id = 1;
  int64 amount = 2;
}
